--- a/index.html
+++ b/index.html
@@ -4,14 +4,53 @@
 <title>Your First React Project</title>
 </head>
 <body>
+
 <div id="content"></div>
+
 <script src="https://fb.me/react-0.14.6.js"></script>
 <script src="https://fb.me/react-dom-0.14.6.js"></script>
 <script src="http://fb.me/JSXTransformer-0.12.1.js"></script>
 <script type="text/jsx">
-/*Add your React code here*/
+  var DATA = {
+    name: 'John Smith',
+    imgURL: 'http://lorempixel.com/200/200/',
+    hobbyList: ['coding', 'writing', 'skiing']
+  }
 
+  var App = React.createClass({
+    render: function(){
+      return (
+        <div>
+          <Profile />
+          <Hobbies />
+        </div>
+      );
+    }
+  });
 
+  var Profile = React.createClass({
+    render: function(){
+      return (
+        <div>
+          <h3>My name</h3>
+          <img src="example.jpg" />
+        </div>
+      );
+    }
+  });
+
+  var Hobbies = React.createClass({
+    render: function(){
+      return (
+        <div>
+          <h5>My hobbies:</h5>
+        </div>
+      );
+    }
+  });
+
+  ReactDOM.render(<App />, document.getElementById('content'));
 </script>
+
 </body>
 </html>
