--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <script type="text/jsx">
   var DATA = {
     name: 'John Smith',
-    imgURL: 'http://lorempixel.com/200/200/',
+    imgURL: 'http://lorempixel.com/100/100/',
     hobbyList: ['coding', 'writing', 'skiing']
   }
 
@@ -21,8 +21,11 @@
     render: function(){
       return (
         <div>
-          <Profile />
-          <Hobbies />
+          <Profile
+            name={this.props.profileData.name}
+            imgURL={this.props.profileData.imgURL} />
+          <Hobbies
+            hobbyList={this.props.profileData.hobbyList} />
         </div>
       );
     }
@@ -32,8 +35,8 @@
     render: function(){
       return (
         <div>
-          <h3>My name</h3>
-          <img src="example.jpg" />
+          <h3>{this.props.name}</h3>
+          <img src={this.props.imgURL} />
         </div>
       );
     }
@@ -41,15 +44,22 @@
 
   var Hobbies = React.createClass({
     render: function(){
+      var hobbies = this.props.hobbyList.map(function(hobby, index){
+        return (<li key={index}>{hobby}</li>);
+      });
+
       return (
         <div>
           <h5>My hobbies:</h5>
+          <ul>
+            {hobbies}
+          </ul>
         </div>
       );
     }
   });
 
-  ReactDOM.render(<App />, document.getElementById('content'));
+  ReactDOM.render(<App profileData={DATA} />, document.getElementById('content'));
 </script>
 
 </body>
